# picsum

./: Cargo.toml  LICENSE.txt  README.md  generate-pics
.github/workflows/: build.yml  release.yml
src/: main.rs
