[package]
name = "picsum"
version = "0.1.4"
edition = "2021"
description = "A simple Rust library to fetch random images from Picsum."
license = "MIT"

[dependencies]
futures = { version = "0.3.30" }
homedir = "0.3.3"
num_cpus = "1.16.0"
reqwest = { version = "0.12.7", features = ["trust-dns"] }
tokio = { version = "1.39.3", features = ["full"] }
